# images_segmentation

./: .gitignore  README.md  pyproject.toml
images_segmentation/: config.py  data.py  train.py
images_segmentation/conf/: config.yaml
images_segmentation/conf/model/: simple.yaml  unet.yaml  vit.yaml
images_segmentation/conf/scheduler/: reduce_plateau.yaml
images_segmentation/models/: __init__.py  shell.py  simple_model.py  unet.py  vit.py
tests/: extract_objects.py  sm_test.py  some_tests.py  unet_test.py  vit_test.py
